# hint

./: LICENSE  Makefile  README-development.md  README.md  cli.md  fingerprint.py  pyg.py  pyproject.bak  pyproject.toml  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
adr/: README.md  build-tools.md  cli-arguments.md  python-tools.md
docs/: Gemfile  _config.yml  index.md
docs/examples/: bash.md
hint_cli/: config.py  config_manager.py  format.py  hint.py  parser.py  repo.py  style.py
markdown/: parser.py
tests/: test_hint.py  test_markdown_parser.py  test_parser.py  test_style.py
