[tool.poetry]
name = "hint-cli"
version = "0.5.0"
description = "Hint exists to get help on commands from the command line, without switching context or applications."
authors = ["Andrew Garner"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/agarthetiger/hint/"
repository = "https://github.com/agarthetiger/hint/"
documentation = "https://agarthetiger.github.io/hint/"
keywords = ["cli", "help"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Topic :: Utilities",
]
include = [
    "LICENSE",
]
packages = [
    { include = "hint_cli" },
    { include = "markdown" },
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
colorama = "^0.4.3"
gitpython = "^3.1.7"


[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
coverage = {extras = ["toml"], version = "^5.2.1"}

[tool.poetry.scripts]
hint = 'hint_cli.hint:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
