[project]
name = "hint-cli"
version = "0.11.0"
description = "Get help and examples for commands from the command line, without switching context or applications."
authors = [
    {email = "1242023+agarthetiger@users.noreply.github.com"},
    {name = "Andrew Garner"}
]
readme = "README.md"
requires-python = ">= 3.9"
license = {file = "LICENSE"}
keywords = ["cli", "help"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]

dependencies = [
    "gitpython ~= 3.1.7",
    "pygments ~= 2.7",
    "paramiko ~= 2.7.2",
    "click ~= 8.0",
]

[project.optional-dependencies]
tests = [
    "pytest ~= 7.1.2",
    "pytest-cov ~= 3.0.0",
    "build",
]

[project.urls]
homepage = "https://github.com/agarthetiger/hint/"
repository = "https://github.com/agarthetiger/hint/"
documentation = "https://agarthetiger.github.io/hint/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
